Add a DataFrame transformation to snake_case all the column names